--- a/wp-content/themes/lcie/sass/modules/_homepage.scss
+++ b/wp-content/themes/lcie/sass/modules/_homepage.scss
@@ -396,6 +396,16 @@
 	right: 0;
 }
 
+.home__calendar__side > div{
+	display: block;
+	width: 100%;
+}
+
+a.home__calendar__side__more{
+	display: block;
+	text-align: right;
+}
+
 @media screen and (max-width: 768px)
 {
 	.grid
